--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-
 .head {
 	background-color: #121212;
 	z-index: 5;
@@ -31,16 +30,14 @@
 	background-color: #f0f1e8;
 	color: black;
 	height: 550px;
-	position: relative;
+	
 	
 }
 .produk2 {
-	position: absolute;
-	z-index: 1;
-	left: 150px;
-	top: -170px;
-	width:1000px; 
-	height:1000px;
+	
+	
+	
+	width:50%; 
 	
 }
 .produk3 {
@@ -78,12 +75,12 @@
 
 
 .agarBisaDiKlik {
-	z-index: 4;
+	
 }
 
 
 
-@media only screen and (max-width: 600px) {
+@media (min-width: 320px) and (max-width: 767px) {
 
 
   .hero h1 {
@@ -97,11 +94,10 @@
 
   }
   .produk2 {
-  	z-index: 1;
-  	left: 0px;
-  	top: 152px;
-  	width: 100%;
-  	height: 100%;
+  	
+  	
+  	width: 50%;
+
   }
  .icon_toggler{
  	width: 20px;
@@ -120,4 +116,3 @@
  	display: none;
  }
 }
-
